stages/stage7/y.output
Terminals unused in grammar

   INC
   DEC
   INT
   STR
   TUPLE
   NEW
   DELETE


Grammar

    0 $accept: start $end

    1 start: Program

    2 Program: %empty
    3        | TDeclBlock GDeclBlock FDefBlock MainBlock
    4        | TDeclBlock GDeclBlock MainBlock
    5        | TDeclBlock MainBlock
    6        | GDeclBlock FDefBlock MainBlock
    7        | GDeclBlock MainBlock
    8        | MainBlock
    9        | TDeclBlock CDeclBlock GDeclBlock FDefBlock MainBlock
   10        | TDeclBlock CDeclBlock GDeclBlock MainBlock
   11        | TDeclBlock CDeclBlock MainBlock
   12        | CDeclBlock GDeclBlock FDefBlock MainBlock
   13        | CDeclBlock GDeclBlock MainBlock
   14        | CDeclBlock MainBlock

   15 TDeclBlock: TYPE TStructs ENDTYPE

   16 TStructs: TStructs TStruct
   17         | TStruct

   18 $@1: %empty

   19 $@2: %empty

   20 TStruct: ID $@1 '{' $@2 TFields '}'

   21 TFields: TFields TField
   22        | TField

   23 $@3: %empty

   24 TField: Type $@3 VList ';'

   25 VList: VList ',' Vid
   26      | Vid

   27 Vid: ID

   28 CDeclBlock: CLASS CStructs ENDCLASS

   29 CStructs: CStructs CStruct
   30         | CStruct

   31 $@4: %empty

   32 $@5: %empty

   33 CStruct: ID '{' $@4 CDeclList $@5 CFDefBlock '}'

   34 $@6: %empty

   35 $@7: %empty

   36 CStruct: ID EXTENDS ID '{' $@6 CDeclList $@7 CFDefBlock '}'

   37 CDeclList: DECL CFields ENDDECL
   38          | DECL ENDDECL
   39          | %empty

   40 CFields: CFields CField
   41        | CField

   42 CField: Type CList ';'

   43 CList: CList ',' Cid
   44      | Cid

   45 Cid: ID

   46 $@8: %empty

   47 $@9: %empty

   48 Cid: ID $@8 '(' ParamList $@9 ')'

   49 CFDefBlock: CFDefBlock CFDef
   50           | CFDef

   51 $@10: %empty

   52 $@11: %empty

   53 $@12: %empty

   54 $@13: %empty

   55 CFDef: Type ID '(' $@10 ParamList ')' $@11 '{' $@12 CLDeclBlock $@13 Body '}'

   56 CLDeclBlock: DECL CLDeclList ENDDECL
   57            | DECL ENDDECL
   58            | %empty

   59 CLDeclList: Type CLList

   60 CLList: CLList CLid
   61       | CLid

   62 CLid: ID

   63 GDeclBlock: DECL GDeclList ENDDECL
   64           | DECL ENDDECL

   65 GDeclList: GDeclList GDecl
   66          | GDecl

   67 GDecl: Type GidList ';'

   68 Type: ID

   69 GidList: GidList ',' Gid
   70        | Gid

   71 Gid: ID
   72    | ID '[' NUM ']'

   73 $@14: %empty

   74 $@15: %empty

   75 Gid: ID '(' $@14 ParamList $@15 ')'

   76 $@16: %empty

   77 $@17: %empty

   78 Gid: MUL ID '(' $@16 ParamList $@17 ')'

   79 FDefBlock: FDefBlock FDef
   80          | FDef

   81 $@18: %empty

   82 $@19: %empty

   83 $@20: %empty

   84 $@21: %empty

   85 FDef: Type ID '(' $@18 ParamList ')' $@19 '{' $@20 LDeclBlock $@21 Body '}'

   86 ParamList: ParamList ',' Param
   87          | Param
   88          | %empty

   89 Param: Type Pid

   90 Pid: ID
   91    | MUL ID

   92 LDeclBlock: DECL LDecList ENDDECL
   93           | DECL ENDDECL
   94           | %empty

   95 LDecList: LDecList LDecl
   96         | LDecl

   97 LDecl: Type IdList ';'

   98 IdList: IdList ',' Lid
   99       | Lid

  100 Lid: ID

  101 $@22: %empty

  102 $@23: %empty

  103 $@24: %empty

  104 MainBlock: MAIN $@22 '(' ')' '{' $@23 LDeclBlock $@24 Body '}'

  105 Body: BEG Slist RETURN Expr ';' END
  106     | BEG RETURN Expr ';' END

  107 Slist: Slist Stmt
  108      | Stmt

  109 Stmt: READ '(' id ')' ';'
  110     | WRITE '(' Expr ')' ';'
  111     | WRITE STRING ';'
  112     | id EQ Expr ';'
  113     | IF '(' Bool ')' THEN Slist ELSE Slist ENDIF ';'
  114     | IF '(' Bool ')' THEN Slist ENDIF ';'
  115     | WHILE '(' Bool ')' DO Slist ENDWHILE ';'
  116     | REPEAT Slist UNTIL '(' Bool ')' ';'
  117     | DO Slist WHILE '(' Bool ')' ';'
  118     | BREAK ';'
  119     | CONTINUE ';'
  120     | BRKP ';'
  121     | EXIT ';'
  122     | INIT '(' ')' ';'
  123     | id EQ ALLOC '(' ')' ';'
  124     | FREE '(' id ')' ';'

  125 Expr: Expr PLUS Expr
  126     | Expr MINUS Expr
  127     | Expr MUL Expr
  128     | Expr DIV Expr
  129     | Expr MOD Expr
  130     | '(' Expr ')'
  131     | NUM
  132     | STRING
  133     | id
  134     | NUL
  135     | ID '(' ')'
  136     | ID '(' ArgList ')'

  137 ArgList: ArgList ',' Expr
  138        | Expr

  139 Bool: Expr LT Expr
  140     | Expr LE Expr
  141     | Expr GT Expr
  142     | Expr GE Expr
  143     | Expr EE Expr
  144     | Expr NE Expr
  145     | TRUE
  146     | FALSE
  147     | '(' Bool ')'
  148     | NOT Bool
  149     | Bool AND Bool
  150     | Bool OR Bool

  151 id: ID
  152   | ID '[' Expr ']'
  153   | MUL id
  154   | '&' id
  155   | Field

  156 Field: Field '.' ID
  157      | ID '.' ID
  158      | SELF '.' ID


Terminals, with rules where they appear

$end (0) 0
'&' (38) 154
'(' (40) 48 55 75 78 85 104 109 110 113 114 115 116 117 122 123 124
    130 135 136 147
')' (41) 48 55 75 78 85 104 109 110 113 114 115 116 117 122 123 124
    130 135 136 147
',' (44) 25 43 69 86 98 137
'.' (46) 156 157 158
';' (59) 24 42 67 97 105 106 109 110 111 112 113 114 115 116 117 118
    119 120 121 122 123 124
'[' (91) 72 152
']' (93) 72 152
'{' (123) 20 33 36 55 85 104
'}' (125) 20 33 36 55 85 104
error (256)
NUM (258) 72 131
ID (259) 20 27 33 36 45 48 55 62 68 71 72 75 78 85 90 91 100 135 136
    151 152 156 157 158
STRING (260) 111 132
PLUS (261) 125
MINUS (262) 126
MUL (263) 78 91 127 153
DIV (264) 128
MOD (265) 129
EQ (266) 112 123
INC (267)
DEC (268)
BEG (269) 105 106
END (270) 105 106
READ (271) 109
WRITE (272) 110 111
IF (273) 113 114
THEN (274) 113 114
ELSE (275) 113
ENDIF (276) 113 114
TRUE (277) 145
FALSE (278) 146
NOT (279) 148
WHILE (280) 115 117
DO (281) 115 117
ENDWHILE (282) 115
BREAK (283) 118
CONTINUE (284) 119
REPEAT (285) 116
UNTIL (286) 116
TYPE (287) 15
ENDTYPE (288) 15
DECL (289) 37 38 56 57 63 64 92 93
ENDDECL (290) 37 38 56 57 63 64 92 93
INT (291)
STR (292)
TUPLE (293)
MAIN (294) 104
RETURN (295) 105 106
BRKP (296) 120
EXIT (297) 121
AND (298) 149
OR (299) 150
INIT (300) 122
ALLOC (301) 123
FREE (302) 124
NUL (303) 134
CLASS (304) 28
ENDCLASS (305) 28
EXTENDS (306) 36
NEW (307)
DELETE (308)
SELF (309) 158
LT (310) 139
LE (311) 140
GT (312) 141
GE (313) 142
EE (314) 143
NE (315) 144


Nonterminals, with rules where they appear

$accept (71)
    on left: 0
start (72)
    on left: 1, on right: 0
Program (73)
    on left: 2 3 4 5 6 7 8 9 10 11 12 13 14, on right: 1
TDeclBlock (74)
    on left: 15, on right: 3 4 5 9 10 11
TStructs (75)
    on left: 16 17, on right: 15 16
TStruct (76)
    on left: 20, on right: 16 17
$@1 (77)
    on left: 18, on right: 20
$@2 (78)
    on left: 19, on right: 20
TFields (79)
    on left: 21 22, on right: 20 21
TField (80)
    on left: 24, on right: 21 22
$@3 (81)
    on left: 23, on right: 24
VList (82)
    on left: 25 26, on right: 24 25
Vid (83)
    on left: 27, on right: 25 26
CDeclBlock (84)
    on left: 28, on right: 9 10 11 12 13 14
CStructs (85)
    on left: 29 30, on right: 28 29
CStruct (86)
    on left: 33 36, on right: 29 30
$@4 (87)
    on left: 31, on right: 33
$@5 (88)
    on left: 32, on right: 33
$@6 (89)
    on left: 34, on right: 36
$@7 (90)
    on left: 35, on right: 36
CDeclList (91)
    on left: 37 38 39, on right: 33 36
CFields (92)
    on left: 40 41, on right: 37 40
CField (93)
    on left: 42, on right: 40 41
CList (94)
    on left: 43 44, on right: 42 43
Cid (95)
    on left: 45 48, on right: 43 44
$@8 (96)
    on left: 46, on right: 48
$@9 (97)
    on left: 47, on right: 48
CFDefBlock (98)
    on left: 49 50, on right: 33 36 49
CFDef (99)
    on left: 55, on right: 49 50
$@10 (100)
    on left: 51, on right: 55
$@11 (101)
    on left: 52, on right: 55
$@12 (102)
    on left: 53, on right: 55
$@13 (103)
    on left: 54, on right: 55
CLDeclBlock (104)
    on left: 56 57 58, on right: 55
CLDeclList (105)
    on left: 59, on right: 56
CLList (106)
    on left: 60 61, on right: 59 60
CLid (107)
    on left: 62, on right: 60 61
GDeclBlock (108)
    on left: 63 64, on right: 3 4 6 7 9 10 12 13
GDeclList (109)
    on left: 65 66, on right: 63 65
GDecl (110)
    on left: 67, on right: 65 66
Type (111)
    on left: 68, on right: 24 42 55 59 67 85 89 97
GidList (112)
    on left: 69 70, on right: 67 69
Gid (113)
    on left: 71 72 75 78, on right: 69 70
$@14 (114)
    on left: 73, on right: 75
$@15 (115)
    on left: 74, on right: 75
$@16 (116)
    on left: 76, on right: 78
$@17 (117)
    on left: 77, on right: 78
FDefBlock (118)
    on left: 79 80, on right: 3 6 9 12 79
FDef (119)
    on left: 85, on right: 79 80
$@18 (120)
    on left: 81, on right: 85
$@19 (121)
    on left: 82, on right: 85
$@20 (122)
    on left: 83, on right: 85
$@21 (123)
    on left: 84, on right: 85
ParamList (124)
    on left: 86 87 88, on right: 48 55 75 78 85 86
Param (125)
    on left: 89, on right: 86 87
Pid (126)
    on left: 90 91, on right: 89
LDeclBlock (127)
    on left: 92 93 94, on right: 85 104
LDecList (128)
    on left: 95 96, on right: 92 95
LDecl (129)
    on left: 97, on right: 95 96
IdList (130)
    on left: 98 99, on right: 97 98
Lid (131)
    on left: 100, on right: 98 99
MainBlock (132)
    on left: 104, on right: 3 4 5 6 7 8 9 10 11 12 13 14
$@22 (133)
    on left: 101, on right: 104
$@23 (134)
    on left: 102, on right: 104
$@24 (135)
    on left: 103, on right: 104
Body (136)
    on left: 105 106, on right: 55 85 104
Slist (137)
    on left: 107 108, on right: 105 107 113 114 115 116 117
Stmt (138)
    on left: 109 110 111 112 113 114 115 116 117 118 119 120 121 122
    123 124, on right: 107 108
Expr (139)
    on left: 125 126 127 128 129 130 131 132 133 134 135 136, on right:
    105 106 110 112 125 126 127 128 129 130 137 138 139 140 141 142
    143 144 152
ArgList (140)
    on left: 137 138, on right: 136 137
Bool (141)
    on left: 139 140 141 142 143 144 145 146 147 148 149 150, on right:
    113 114 115 116 117 147 148 149 150
id (142)
    on left: 151 152 153 154 155, on right: 109 112 123 124 133 153
    154
Field (143)
    on left: 156 157 158, on right: 155 156


State 0

    0 $accept: . start $end

    TYPE   shift, and go to state 1
    DECL   shift, and go to state 2
    MAIN   shift, and go to state 3
    CLASS  shift, and go to state 4

    $default  reduce using rule 2 (Program)

    start       go to state 5
    Program     go to state 6
    TDeclBlock  go to state 7
    CDeclBlock  go to state 8
    GDeclBlock  go to state 9
    MainBlock   go to state 10


State 1

   15 TDeclBlock: TYPE . TStructs ENDTYPE

    ID  shift, and go to state 11

    TStructs  go to state 12
    TStruct   go to state 13


State 2

   63 GDeclBlock: DECL . GDeclList ENDDECL
   64           | DECL . ENDDECL

    ID       shift, and go to state 14
    ENDDECL  shift, and go to state 15

    GDeclList  go to state 16
    GDecl      go to state 17
    Type       go to state 18


State 3

  104 MainBlock: MAIN . $@22 '(' ')' '{' $@23 LDeclBlock $@24 Body '}'

    $default  reduce using rule 101 ($@22)

    $@22  go to state 19


State 4

   28 CDeclBlock: CLASS . CStructs ENDCLASS

    ID  shift, and go to state 20

    CStructs  go to state 21
    CStruct   go to state 22


State 5

    0 $accept: start . $end

    $end  shift, and go to state 23


State 6

    1 start: Program .

    $default  reduce using rule 1 (start)


State 7

    3 Program: TDeclBlock . GDeclBlock FDefBlock MainBlock
    4        | TDeclBlock . GDeclBlock MainBlock
    5        | TDeclBlock . MainBlock
    9        | TDeclBlock . CDeclBlock GDeclBlock FDefBlock MainBlock
   10        | TDeclBlock . CDeclBlock GDeclBlock MainBlock
   11        | TDeclBlock . CDeclBlock MainBlock

    DECL   shift, and go to state 2
    MAIN   shift, and go to state 3
    CLASS  shift, and go to state 4

    CDeclBlock  go to state 24
    GDeclBlock  go to state 25
    MainBlock   go to state 26


State 8

   12 Program: CDeclBlock . GDeclBlock FDefBlock MainBlock
   13        | CDeclBlock . GDeclBlock MainBlock
   14        | CDeclBlock . MainBlock

    DECL  shift, and go to state 2
    MAIN  shift, and go to state 3

    GDeclBlock  go to state 27
    MainBlock   go to state 28


State 9

    6 Program: GDeclBlock . FDefBlock MainBlock
    7        | GDeclBlock . MainBlock

    ID    shift, and go to state 14
    MAIN  shift, and go to state 3

    Type       go to state 29
    FDefBlock  go to state 30
    FDef       go to state 31
    MainBlock  go to state 32


State 10

    8 Program: MainBlock .

    $default  reduce using rule 8 (Program)


State 11

   20 TStruct: ID . $@1 '{' $@2 TFields '}'

    $default  reduce using rule 18 ($@1)

    $@1  go to state 33


State 12

   15 TDeclBlock: TYPE TStructs . ENDTYPE
   16 TStructs: TStructs . TStruct

    ID       shift, and go to state 11
    ENDTYPE  shift, and go to state 34

    TStruct  go to state 35


State 13

   17 TStructs: TStruct .

    $default  reduce using rule 17 (TStructs)


State 14

   68 Type: ID .

    $default  reduce using rule 68 (Type)


State 15

   64 GDeclBlock: DECL ENDDECL .

    $default  reduce using rule 64 (GDeclBlock)


State 16

   63 GDeclBlock: DECL GDeclList . ENDDECL
   65 GDeclList: GDeclList . GDecl

    ID       shift, and go to state 14
    ENDDECL  shift, and go to state 36

    GDecl  go to state 37
    Type   go to state 18


State 17

   66 GDeclList: GDecl .

    $default  reduce using rule 66 (GDeclList)


State 18

   67 GDecl: Type . GidList ';'

    ID   shift, and go to state 38
    MUL  shift, and go to state 39

    GidList  go to state 40
    Gid      go to state 41


State 19

  104 MainBlock: MAIN $@22 . '(' ')' '{' $@23 LDeclBlock $@24 Body '}'

    '('  shift, and go to state 42


State 20

   33 CStruct: ID . '{' $@4 CDeclList $@5 CFDefBlock '}'
   36        | ID . EXTENDS ID '{' $@6 CDeclList $@7 CFDefBlock '}'

    EXTENDS  shift, and go to state 43
    '{'      shift, and go to state 44


State 21

   28 CDeclBlock: CLASS CStructs . ENDCLASS
   29 CStructs: CStructs . CStruct

    ID        shift, and go to state 20
    ENDCLASS  shift, and go to state 45

    CStruct  go to state 46


State 22

   30 CStructs: CStruct .

    $default  reduce using rule 30 (CStructs)


State 23

    0 $accept: start $end .

    $default  accept


State 24

    9 Program: TDeclBlock CDeclBlock . GDeclBlock FDefBlock MainBlock
   10        | TDeclBlock CDeclBlock . GDeclBlock MainBlock
   11        | TDeclBlock CDeclBlock . MainBlock

    DECL  shift, and go to state 2
    MAIN  shift, and go to state 3

    GDeclBlock  go to state 47
    MainBlock   go to state 48


State 25

    3 Program: TDeclBlock GDeclBlock . FDefBlock MainBlock
    4        | TDeclBlock GDeclBlock . MainBlock

    ID    shift, and go to state 14
    MAIN  shift, and go to state 3

    Type       go to state 29
    FDefBlock  go to state 49
    FDef       go to state 31
    MainBlock  go to state 50


State 26

    5 Program: TDeclBlock MainBlock .

    $default  reduce using rule 5 (Program)


State 27

   12 Program: CDeclBlock GDeclBlock . FDefBlock MainBlock
   13        | CDeclBlock GDeclBlock . MainBlock

    ID    shift, and go to state 14
    MAIN  shift, and go to state 3

    Type       go to state 29
    FDefBlock  go to state 51
    FDef       go to state 31
    MainBlock  go to state 52


State 28

   14 Program: CDeclBlock MainBlock .

    $default  reduce using rule 14 (Program)


State 29

   85 FDef: Type . ID '(' $@18 ParamList ')' $@19 '{' $@20 LDeclBlock $@21 Body '}'

    ID  shift, and go to state 53


State 30

    6 Program: GDeclBlock FDefBlock . MainBlock
   79 FDefBlock: FDefBlock . FDef

    ID    shift, and go to state 14
    MAIN  shift, and go to state 3

    Type       go to state 29
    FDef       go to state 54
    MainBlock  go to state 55


State 31

   80 FDefBlock: FDef .

    $default  reduce using rule 80 (FDefBlock)


State 32

    7 Program: GDeclBlock MainBlock .

    $default  reduce using rule 7 (Program)


State 33

   20 TStruct: ID $@1 . '{' $@2 TFields '}'

    '{'  shift, and go to state 56


State 34

   15 TDeclBlock: TYPE TStructs ENDTYPE .

    $default  reduce using rule 15 (TDeclBlock)


State 35

   16 TStructs: TStructs TStruct .

    $default  reduce using rule 16 (TStructs)


State 36

   63 GDeclBlock: DECL GDeclList ENDDECL .

    $default  reduce using rule 63 (GDeclBlock)


State 37

   65 GDeclList: GDeclList GDecl .

    $default  reduce using rule 65 (GDeclList)


State 38

   71 Gid: ID .
   72    | ID . '[' NUM ']'
   75    | ID . '(' $@14 ParamList $@15 ')'

    '('  shift, and go to state 57
    '['  shift, and go to state 58

    $default  reduce using rule 71 (Gid)


State 39

   78 Gid: MUL . ID '(' $@16 ParamList $@17 ')'

    ID  shift, and go to state 59


State 40

   67 GDecl: Type GidList . ';'
   69 GidList: GidList . ',' Gid

    ';'  shift, and go to state 60
    ','  shift, and go to state 61


State 41

   70 GidList: Gid .

    $default  reduce using rule 70 (GidList)


State 42

  104 MainBlock: MAIN $@22 '(' . ')' '{' $@23 LDeclBlock $@24 Body '}'

    ')'  shift, and go to state 62


State 43

   36 CStruct: ID EXTENDS . ID '{' $@6 CDeclList $@7 CFDefBlock '}'

    ID  shift, and go to state 63


State 44

   33 CStruct: ID '{' . $@4 CDeclList $@5 CFDefBlock '}'

    $default  reduce using rule 31 ($@4)

    $@4  go to state 64


State 45

   28 CDeclBlock: CLASS CStructs ENDCLASS .

    $default  reduce using rule 28 (CDeclBlock)


State 46

   29 CStructs: CStructs CStruct .

    $default  reduce using rule 29 (CStructs)


State 47

    9 Program: TDeclBlock CDeclBlock GDeclBlock . FDefBlock MainBlock
   10        | TDeclBlock CDeclBlock GDeclBlock . MainBlock

    ID    shift, and go to state 14
    MAIN  shift, and go to state 3

    Type       go to state 29
    FDefBlock  go to state 65
    FDef       go to state 31
    MainBlock  go to state 66


State 48

   11 Program: TDeclBlock CDeclBlock MainBlock .

    $default  reduce using rule 11 (Program)


State 49

    3 Program: TDeclBlock GDeclBlock FDefBlock . MainBlock
   79 FDefBlock: FDefBlock . FDef

    ID    shift, and go to state 14
    MAIN  shift, and go to state 3

    Type       go to state 29
    FDef       go to state 54
    MainBlock  go to state 67


State 50

    4 Program: TDeclBlock GDeclBlock MainBlock .

    $default  reduce using rule 4 (Program)


State 51

   12 Program: CDeclBlock GDeclBlock FDefBlock . MainBlock
   79 FDefBlock: FDefBlock . FDef

    ID    shift, and go to state 14
    MAIN  shift, and go to state 3

    Type       go to state 29
    FDef       go to state 54
    MainBlock  go to state 68


State 52

   13 Program: CDeclBlock GDeclBlock MainBlock .

    $default  reduce using rule 13 (Program)


State 53

   85 FDef: Type ID . '(' $@18 ParamList ')' $@19 '{' $@20 LDeclBlock $@21 Body '}'

    '('  shift, and go to state 69


State 54

   79 FDefBlock: FDefBlock FDef .

    $default  reduce using rule 79 (FDefBlock)


State 55

    6 Program: GDeclBlock FDefBlock MainBlock .

    $default  reduce using rule 6 (Program)


State 56

   20 TStruct: ID $@1 '{' . $@2 TFields '}'

    $default  reduce using rule 19 ($@2)

    $@2  go to state 70


State 57

   75 Gid: ID '(' . $@14 ParamList $@15 ')'

    $default  reduce using rule 73 ($@14)

    $@14  go to state 71


State 58

   72 Gid: ID '[' . NUM ']'

    NUM  shift, and go to state 72


State 59

   78 Gid: MUL ID . '(' $@16 ParamList $@17 ')'

    '('  shift, and go to state 73


State 60

   67 GDecl: Type GidList ';' .

    $default  reduce using rule 67 (GDecl)


State 61

   69 GidList: GidList ',' . Gid

    ID   shift, and go to state 38
    MUL  shift, and go to state 39

    Gid  go to state 74


State 62

  104 MainBlock: MAIN $@22 '(' ')' . '{' $@23 LDeclBlock $@24 Body '}'

    '{'  shift, and go to state 75


State 63

   36 CStruct: ID EXTENDS ID . '{' $@6 CDeclList $@7 CFDefBlock '}'

    '{'  shift, and go to state 76


State 64

   33 CStruct: ID '{' $@4 . CDeclList $@5 CFDefBlock '}'

    DECL  shift, and go to state 77

    $default  reduce using rule 39 (CDeclList)

    CDeclList  go to state 78


State 65

    9 Program: TDeclBlock CDeclBlock GDeclBlock FDefBlock . MainBlock
   79 FDefBlock: FDefBlock . FDef

    ID    shift, and go to state 14
    MAIN  shift, and go to state 3

    Type       go to state 29
    FDef       go to state 54
    MainBlock  go to state 79


State 66

   10 Program: TDeclBlock CDeclBlock GDeclBlock MainBlock .

    $default  reduce using rule 10 (Program)


State 67

    3 Program: TDeclBlock GDeclBlock FDefBlock MainBlock .

    $default  reduce using rule 3 (Program)


State 68

   12 Program: CDeclBlock GDeclBlock FDefBlock MainBlock .

    $default  reduce using rule 12 (Program)


State 69

   85 FDef: Type ID '(' . $@18 ParamList ')' $@19 '{' $@20 LDeclBlock $@21 Body '}'

    $default  reduce using rule 81 ($@18)

    $@18  go to state 80


State 70

   20 TStruct: ID $@1 '{' $@2 . TFields '}'

    ID  shift, and go to state 14

    TFields  go to state 81
    TField   go to state 82
    Type     go to state 83


State 71

   75 Gid: ID '(' $@14 . ParamList $@15 ')'

    ID  shift, and go to state 14

    $default  reduce using rule 88 (ParamList)

    Type       go to state 84
    ParamList  go to state 85
    Param      go to state 86


State 72

   72 Gid: ID '[' NUM . ']'

    ']'  shift, and go to state 87


State 73

   78 Gid: MUL ID '(' . $@16 ParamList $@17 ')'

    $default  reduce using rule 76 ($@16)

    $@16  go to state 88


State 74

   69 GidList: GidList ',' Gid .

    $default  reduce using rule 69 (GidList)


State 75

  104 MainBlock: MAIN $@22 '(' ')' '{' . $@23 LDeclBlock $@24 Body '}'

    $default  reduce using rule 102 ($@23)

    $@23  go to state 89


State 76

   36 CStruct: ID EXTENDS ID '{' . $@6 CDeclList $@7 CFDefBlock '}'

    $default  reduce using rule 34 ($@6)

    $@6  go to state 90


State 77

   37 CDeclList: DECL . CFields ENDDECL
   38          | DECL . ENDDECL

    ID       shift, and go to state 14
    ENDDECL  shift, and go to state 91

    CFields  go to state 92
    CField   go to state 93
    Type     go to state 94


State 78

   33 CStruct: ID '{' $@4 CDeclList . $@5 CFDefBlock '}'

    $default  reduce using rule 32 ($@5)

    $@5  go to state 95


State 79

    9 Program: TDeclBlock CDeclBlock GDeclBlock FDefBlock MainBlock .

    $default  reduce using rule 9 (Program)


State 80

   85 FDef: Type ID '(' $@18 . ParamList ')' $@19 '{' $@20 LDeclBlock $@21 Body '}'

    ID  shift, and go to state 14

    $default  reduce using rule 88 (ParamList)

    Type       go to state 84
    ParamList  go to state 96
    Param      go to state 86


State 81

   20 TStruct: ID $@1 '{' $@2 TFields . '}'
   21 TFields: TFields . TField

    ID   shift, and go to state 14
    '}'  shift, and go to state 97

    TField  go to state 98
    Type    go to state 83


State 82

   22 TFields: TField .

    $default  reduce using rule 22 (TFields)


State 83

   24 TField: Type . $@3 VList ';'

    $default  reduce using rule 23 ($@3)

    $@3  go to state 99


State 84

   89 Param: Type . Pid

    ID   shift, and go to state 100
    MUL  shift, and go to state 101

    Pid  go to state 102


State 85

   75 Gid: ID '(' $@14 ParamList . $@15 ')'
   86 ParamList: ParamList . ',' Param

    ','  shift, and go to state 103

    $default  reduce using rule 74 ($@15)

    $@15  go to state 104


State 86

   87 ParamList: Param .

    $default  reduce using rule 87 (ParamList)


State 87

   72 Gid: ID '[' NUM ']' .

    $default  reduce using rule 72 (Gid)


State 88

   78 Gid: MUL ID '(' $@16 . ParamList $@17 ')'

    ID  shift, and go to state 14

    $default  reduce using rule 88 (ParamList)

    Type       go to state 84
    ParamList  go to state 105
    Param      go to state 86


State 89

  104 MainBlock: MAIN $@22 '(' ')' '{' $@23 . LDeclBlock $@24 Body '}'

    DECL  shift, and go to state 106

    $default  reduce using rule 94 (LDeclBlock)

    LDeclBlock  go to state 107


State 90

   36 CStruct: ID EXTENDS ID '{' $@6 . CDeclList $@7 CFDefBlock '}'

    DECL  shift, and go to state 77

    $default  reduce using rule 39 (CDeclList)

    CDeclList  go to state 108


State 91

   38 CDeclList: DECL ENDDECL .

    $default  reduce using rule 38 (CDeclList)


State 92

   37 CDeclList: DECL CFields . ENDDECL
   40 CFields: CFields . CField

    ID       shift, and go to state 14
    ENDDECL  shift, and go to state 109

    CField  go to state 110
    Type    go to state 94


State 93

   41 CFields: CField .

    $default  reduce using rule 41 (CFields)


State 94

   42 CField: Type . CList ';'

    ID  shift, and go to state 111

    CList  go to state 112
    Cid    go to state 113


State 95

   33 CStruct: ID '{' $@4 CDeclList $@5 . CFDefBlock '}'

    ID  shift, and go to state 14

    CFDefBlock  go to state 114
    CFDef       go to state 115
    Type        go to state 116


State 96

   85 FDef: Type ID '(' $@18 ParamList . ')' $@19 '{' $@20 LDeclBlock $@21 Body '}'
   86 ParamList: ParamList . ',' Param

    ','  shift, and go to state 103
    ')'  shift, and go to state 117


State 97

   20 TStruct: ID $@1 '{' $@2 TFields '}' .

    $default  reduce using rule 20 (TStruct)


State 98

   21 TFields: TFields TField .

    $default  reduce using rule 21 (TFields)


State 99

   24 TField: Type $@3 . VList ';'

    ID  shift, and go to state 118

    VList  go to state 119
    Vid    go to state 120


State 100

   90 Pid: ID .

    $default  reduce using rule 90 (Pid)


State 101

   91 Pid: MUL . ID

    ID  shift, and go to state 121


State 102

   89 Param: Type Pid .

    $default  reduce using rule 89 (Param)


State 103

   86 ParamList: ParamList ',' . Param

    ID  shift, and go to state 14

    Type   go to state 84
    Param  go to state 122


State 104

   75 Gid: ID '(' $@14 ParamList $@15 . ')'

    ')'  shift, and go to state 123


State 105

   78 Gid: MUL ID '(' $@16 ParamList . $@17 ')'
   86 ParamList: ParamList . ',' Param

    ','  shift, and go to state 103

    $default  reduce using rule 77 ($@17)

    $@17  go to state 124


State 106

   92 LDeclBlock: DECL . LDecList ENDDECL
   93           | DECL . ENDDECL

    ID       shift, and go to state 14
    ENDDECL  shift, and go to state 125

    Type      go to state 126
    LDecList  go to state 127
    LDecl     go to state 128


State 107

  104 MainBlock: MAIN $@22 '(' ')' '{' $@23 LDeclBlock . $@24 Body '}'

    $default  reduce using rule 103 ($@24)

    $@24  go to state 129


State 108

   36 CStruct: ID EXTENDS ID '{' $@6 CDeclList . $@7 CFDefBlock '}'

    $default  reduce using rule 35 ($@7)

    $@7  go to state 130


State 109

   37 CDeclList: DECL CFields ENDDECL .

    $default  reduce using rule 37 (CDeclList)


State 110

   40 CFields: CFields CField .

    $default  reduce using rule 40 (CFields)


State 111

   45 Cid: ID .
   48    | ID . $@8 '(' ParamList $@9 ')'

    '('       reduce using rule 46 ($@8)
    $default  reduce using rule 45 (Cid)

    $@8  go to state 131


State 112

   42 CField: Type CList . ';'
   43 CList: CList . ',' Cid

    ';'  shift, and go to state 132
    ','  shift, and go to state 133


State 113

   44 CList: Cid .

    $default  reduce using rule 44 (CList)


State 114

   33 CStruct: ID '{' $@4 CDeclList $@5 CFDefBlock . '}'
   49 CFDefBlock: CFDefBlock . CFDef

    ID   shift, and go to state 14
    '}'  shift, and go to state 134

    CFDef  go to state 135
    Type   go to state 116


State 115

   50 CFDefBlock: CFDef .

    $default  reduce using rule 50 (CFDefBlock)


State 116

   55 CFDef: Type . ID '(' $@10 ParamList ')' $@11 '{' $@12 CLDeclBlock $@13 Body '}'

    ID  shift, and go to state 136


State 117

   85 FDef: Type ID '(' $@18 ParamList ')' . $@19 '{' $@20 LDeclBlock $@21 Body '}'

    $default  reduce using rule 82 ($@19)

    $@19  go to state 137


State 118

   27 Vid: ID .

    $default  reduce using rule 27 (Vid)


State 119

   24 TField: Type $@3 VList . ';'
   25 VList: VList . ',' Vid

    ';'  shift, and go to state 138
    ','  shift, and go to state 139


State 120

   26 VList: Vid .

    $default  reduce using rule 26 (VList)


State 121

   91 Pid: MUL ID .

    $default  reduce using rule 91 (Pid)


State 122

   86 ParamList: ParamList ',' Param .

    $default  reduce using rule 86 (ParamList)


State 123

   75 Gid: ID '(' $@14 ParamList $@15 ')' .

    $default  reduce using rule 75 (Gid)


State 124

   78 Gid: MUL ID '(' $@16 ParamList $@17 . ')'

    ')'  shift, and go to state 140


State 125

   93 LDeclBlock: DECL ENDDECL .

    $default  reduce using rule 93 (LDeclBlock)


State 126

   97 LDecl: Type . IdList ';'

    ID  shift, and go to state 141

    IdList  go to state 142
    Lid     go to state 143


State 127

   92 LDeclBlock: DECL LDecList . ENDDECL
   95 LDecList: LDecList . LDecl

    ID       shift, and go to state 14
    ENDDECL  shift, and go to state 144

    Type   go to state 126
    LDecl  go to state 145


State 128

   96 LDecList: LDecl .

    $default  reduce using rule 96 (LDecList)


State 129

  104 MainBlock: MAIN $@22 '(' ')' '{' $@23 LDeclBlock $@24 . Body '}'

    BEG  shift, and go to state 146

    Body  go to state 147


State 130

   36 CStruct: ID EXTENDS ID '{' $@6 CDeclList $@7 . CFDefBlock '}'

    ID  shift, and go to state 14

    CFDefBlock  go to state 148
    CFDef       go to state 115
    Type        go to state 116


State 131
